--- a/css/style.css
+++ b/css/style.css
@@ -493,6 +493,8 @@ header .navbar{
     gap: 1rem;
     padding: 0 20px;
     max-width: 100%;
+    margin-top: 2rem;  /* separa del texto anterior */
+    margin-bottom: 2rem;
 }
 
 .carousel-clientes {
