--- a/css/style-servicios.css
+++ b/css/style-servicios.css
@@ -462,6 +462,48 @@ header .navbar{
   display: none !important;
 }
 
+.boton {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem 1rem;              
+    margin-top: 0rem;
+    margin-bottom: 0rem;
+    padding: 3rem 1rem;          
+    text-align: center;
+}
+
+.boton h3 {
+    font-family: "Gotham", sans-serif;    
+    font-size: 1.9rem;                 
+    font-weight: 600;
+    color: var(--bice-blue);     
+    margin-bottom: 2rem;           
+    line-height: 1.3;
+    }
+
+
+.se-parte {
+    display: inline-block;
+    font-family: "Gotham", sans-serif;
+    text-decoration: none;
+    padding: 15px 35px;
+    background: var(--universo-blue);
+    color: var(--white-color);
+    border: 2px solid transparent;
+    border-radius: var(--border-radius-m);
+    font-weight: var(--font-weigth-semibold);
+    transition: all 0.3s ease;
+}
+
+.se-parte:hover {
+    background: transparent;
+    color: var(--bice-blue);
+    border: 2px solid;
+    border-color: var(--bice-blue);
+    box-shadow: 0 5px 15px rgba(30, 78, 122, 0.3);
+}
+
 .footer {
   background-color: var(--universo-blue);
   color: var(--white-color);
